--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,14 @@
-=== Authors ====
-1. @seanpm2001
-2. @GaurPeeyush (for the modified SVG logo)
-3. No other authors as of 2021, August 26th at 5:24 pm
 
----
-The authors file is for everyone who has contributed to this project directly. The credits file is for all credits and authors, along with other projects used in this project.
----
+***
+
+# Authors
+
+1. [@seanpm2001](https://github.com/seanpm2001/)
+
+2. [@All-contributors[bot]](https://github.com/all-contributors/)
+
+3. No other authors as of 2022, Tuesday, April 5th at 4:38 pm
+
+**The authors file is for everyone who has contributed to this project directly. The credits file is for all credits and authors, along with other projects used in this project.**
+
+***
