--- a/INSTALL
+++ b/INSTALL
@@ -1,8 +1,11 @@
----
-Installing Seanpm2001/Its-time-to-cut-WideVine-DRM
----
 
-DeGoogle-your-life and its related projects currently doesn't require installation, it is just a collection of images and information related to the topic of DeGoogling.
+----
+
+----
+Installing Seanpm2001/Its-time-to-cut-WideVine-DRM
+----
+
+DeGoogle-your-life and its related projects currently don't require installation, it is just a collection of images and information related to the topic of DeGoogling.
 
 If you want to load the first project language file, you will need to have an HTML5 Framework and an HTML5 capable IDE/Interpreter (web browser) and a package of HTML 5.0 or higher
 
@@ -14,6 +17,8 @@ Some included files are in Markdown format (*.md) for best viewing, you should u
 
 Some included files are in PDF format. They should be opened with a document viewer capable of handling PDF documents.
 
----
-Install instructions file version: 1 (Thursday, August 26th 2021 at 6:18 pm)
----
+----
+Install instructions file version: 2 (Tuesday, 2022 April 5th at 4:58 pm)
+----
+
+----
